--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 # Change baseurl before deploy
-baseurl = "https://cmanziel.github.io/cmandelli.github.io/"
+baseurl = "https://cmanziel.github.io"
 languageCode = "en-us"
 paginate = 5
 title = "Hugo Theme Stack Starter"
