--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -10,15 +10,15 @@
 [[social]]
 identifier = "github"
 name = "GitHub"
-url = "https://github.com/CaiJimmy/hugo-theme-stack"
+url = "https://github.com/cmanziel"
 
 [social.params]
 icon = "brand-github"
 
 [[social]]
-identifier = "twitter"
-name = "Twitter"
-url = "https://twitter.com"
+identifier = "mail"
+name = "E-mail"
+url = "mailto:claudio.mandelli01@gmail.com"
 
 [social.params]
 icon = "brand-twitter"
