--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -16,9 +16,9 @@ url = "https://github.com/cmanziel"
 icon = "brand-github"
 
 [[social]]
-identifier = "mail_white"
+identifier = "mail"
 name = "E-mail"
 url = "mailto:claudio.mandelli01@gmail.com"
 
 [social.params]
-icon = "envelope"
+icon = "mail_white"
